Верстка index.html 1

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,11 @@
+
 //general
+@import "blocks/page.scss";
 @import "blocks/btn.scss";
 @import "blocks/page-header.scss";
 @import "blocks/main-menu.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/slider.scss";
-@import "blocks/logo.scss";
 
 //index.html
 
