--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -8,14 +8,15 @@
   &__logo {
     background-color: rgba(178,178,178,0.1);
     width: 100%;
-    // height: 325 - 260px;
     img {
-      margin: 20px;
+      position: absolute;
+      z-index: 5;
+      top: 20px;
+      left: 20px;
+      // margin: 20px;
       vertical-align: bottom;
     }
-    // position: absolute;
-    // top: 0;
-    // left: 0;
+
   }
 
   &__banner {
