--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -1,8 +1,13 @@
 .intro {
-  text-align: center;
-  background-color: #f2f2f2;
-  overflow: hidden;
-  width: 100%;
+
+
+
+  &__wrapper {
+    @include container();
+    border: 1px solid black;
+    background-color: #f2f2f2;
+    text-align: center;
+  }
 
 
   &__title-group {
@@ -10,19 +15,6 @@
     position: relative;
     background-color: white;
 
-
-    &:after {
-      content: "";
-      position: absolute;
-      background-color: white;
-      width: 110%;
-      height: 40px;
-      display: block;
-      transform: rotate(-5deg);
-      top: 90%;
-      left: -5%;
-
-    }
   }
 
   &__title {
