--- a/sass/blocks/main-menu.scss
+++ b/sass/blocks/main-menu.scss
@@ -1,57 +1,96 @@
 .main-menu {
-  width: 100%;
-  background-color: #283645;
-  position: absolute;
-  top: 0; left: 0;
+  position: relative;
+  // background-color: #283645;
 
   &--closed {
     display: none;
   }
   &__items {
-    margin: 0; padding: 0;
+    margin: 0;
+    padding: 0;
     list-style: none;
+    border-top: 1px solid black;
   }
   &__item {
-
     a {
+      margin: 0;
       color: white;
       text-align: center;
       border-top: 1px solid #485461;
       border-bottom: 1px solid black;
       display: block;
       font-family: "OpenSansBold";
+      font-size: 17.8px;
       text-transform: uppercase;
       text-decoration: none;
-      padding: 20px;
+      padding: 19px;
     }
   }
 
   &__toggle {
-    height: 60px;
-    position: relative;
-    border-bottom: 1px solid black;
-
+    height: 70px;
+    position: absolute;
+    top: -70px;
+    right: 0;
+    width: 70px;
+    background: transparent;
+    border: none;
+    outline: none;
     &:after {
       position: absolute;
-      top: 50%;
-      right: 20px;
+      top: 30px;
+      right: 16px;
       display: block;
       content: "";
       width: 30px;
-      height: 3px;
-      background: white;
-      transform: rotate(45deg);
+      height: 5px;
+      background: green;
+      transform: rotate(44deg);
+      transition: top 1s, width 1s, transform 1s;
     }
     &:before {
       position: absolute;
-      top: 50%;
-      right: 20px;
+      top: 30px;
+      right: 16px;
       display: block;
       content: "";
       width: 30px;
-      height: 3px;
-      background: white;
-      transform: rotate(-45deg);
+      height: 5px;
+      background: blue;
+      transform: rotate(-44deg);
+      transition: top 1s, width 1s, transform 1s;
+    }
+  }
+
+  &__toggle--burger {
+    padding: 0;
+    height: 5px;
+    position: absolute;
+    top: -40px;
+    right: 16px;
+    width: 50px;
+    background: steelblue;
+    border: none;
+    outline: none;
+    &:after {
+      position: absolute;
+      top: -10px;
+      display: block;
+      content: "";
+      width: 100%;
+      height: 5px;
+      background: red;
+      transition: top 1s, width 1s, transform 1s;
+    }
+    &:before {
+      position: absolute;
+      top: 10px;
+      display: block;
+      content: "";
+      width: 100%;
+      height: 5px;
+      background: green;
+      transition: top 1s, width 1s, transform 1s;
     }
   }
 
