--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -1,30 +1,24 @@
 .page-header {
-  background-color: #1d2631;
-  background-image: url(../img/bg-back-mobile@1x.jpg);
-  width: 280;
+
+  &__wrapper {
+    @include container();
+  }
+  // background-color: #1d2631;
+  // background-image: url(../img/bg-back-mobile@1x.jpg);
   background-size: cover;
   background-position: 50%;
 
   &__logo {
     background-color: rgba(178,178,178,0.1);
-    width: 100%;
     img {
-      position: absolute;
-      z-index: 5;
-      top: 20px;
-      left: 20px;
-      // margin: 20px;
-      vertical-align: bottom;
+      margin: 20px;
     }
+    // border: 1px solid white;
 
 
 
   }
 
-  &__container {
-    padding: 40px 20px;
-    color: #fff;
-  }
 
 
 
@@ -46,21 +40,4 @@
       color: #1d2631;
     }
   }
-}
-
-
-@media (min-width: 768px) {
-  .page-header {
-    width: 640px;
-    padding: 0 64px;
-  }
-
-}
-
-@media (min-width: 1200px) {
-  .page-header {
-    width: 960px;
-    padding: 0 120px;
-  }
-
 }
