--- a/sass/blocks/main-menu.scss
+++ b/sass/blocks/main-menu.scss
@@ -1,15 +1,30 @@
 .main-menu {
   position: relative;
-  // background-color: #283645;
+  background-color: #283645;
 
   &--closed {
-    display: none;
+    .main-menu__items {
+      display: none;
+    }
   }
   &__items {
     margin: 0;
     padding: 0;
     list-style: none;
     border-top: 1px solid black;
+
+    &:before {
+      content: "";
+
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 70px;
+      background: #283645 url(../img/logo-pink-white-mobile.svg) no-repeat 20px 20px;
+      background-size: 76px 25px;
+      top: -70px;
+      left: 0;
+    }
   }
   &__item {
     a {
@@ -33,65 +48,40 @@
     top: -70px;
     right: 0;
     width: 70px;
-    background: transparent;
+    background: url(../img/icon-menu-cross.svg) no-repeat 50% 50%;
+    z-index: 2;
+    &.main-menu__toggle--burger {
+      background-image: url(../img/icon-menu-burger.svg);
+
+    }
+    // background: transparent;
     border: none;
     outline: none;
-    &:after {
-      position: absolute;
-      top: 30px;
-      right: 16px;
-      display: block;
-      content: "";
-      width: 30px;
-      height: 5px;
-      background: green;
-      transform: rotate(44deg);
-      transition: top 1s, width 1s, transform 1s;
-    }
-    &:before {
-      position: absolute;
-      top: 30px;
-      right: 16px;
-      display: block;
-      content: "";
-      width: 30px;
-      height: 5px;
-      background: blue;
-      transform: rotate(-44deg);
-      transition: top 1s, width 1s, transform 1s;
-    }
+    // &:after {
+    //   position: absolute;
+    //   top: 30px;
+    //   right: 16px;
+    //   display: block;
+    //   content: "";
+    //   width: 30px;
+    //   height: 5px;
+    //   background: white;
+    //   transform: rotate(44deg);
+    // }
+    // &:before {
+    //   position: absolute;
+    //   top: 30px;
+    //   right: 16px;
+    //   display: block;
+    //   content: "";
+    //   width: 30px;
+    //   height: 5px;
+    //   background: white;
+    //   transform: rotate(-44deg);
+    //
+    // }
   }
 
-  &__toggle--burger {
-    padding: 0;
-    height: 5px;
-    position: absolute;
-    top: -40px;
-    right: 16px;
-    width: 50px;
-    background: steelblue;
-    border: none;
-    outline: none;
-    &:after {
-      position: absolute;
-      top: -10px;
-      display: block;
-      content: "";
-      width: 100%;
-      height: 5px;
-      background: red;
-      transition: top 1s, width 1s, transform 1s;
-    }
-    &:before {
-      position: absolute;
-      top: 10px;
-      display: block;
-      content: "";
-      width: 100%;
-      height: 5px;
-      background: green;
-      transition: top 1s, width 1s, transform 1s;
-    }
-  }
+
 
 }
