--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,7 +14,8 @@
 
 @import "blocks/advantages.scss";
 @import "blocks/apps-links.scss";
-@import "blocks/contacts.scss";
+@import "blocks/questions.scss";
+@import "blocks/map.scss";
 @import "blocks/intro.scss";
 @import "blocks/reviews.scss";
 @import "blocks/suggestion.scss";
