--- a/sass/blocks/outlines.scss
+++ b/sass/blocks/outlines.scss
@@ -1,12 +1,14 @@
 body {
-  // background: #ccc url(../img/pink-index-mobile.jpg) no-repeat 50% 0px;
+  background: #ccc url(../img/pink-index-mobile.jpg) no-repeat 50% 0;
   background-size: 320px;
 
 
   @media (min-width: 768px) {
-
+    background: #ccc url(../img/pink-index-tablet.jpg) no-repeat 50% 0;
+    background-size: 700px;
   }
-  @media (min-width: 1200px) {
-
+  @media (min-width: 1250px) {
+    background: #ccc url(../img/pink-index-desktop.jpg) no-repeat 50% 0;
+    background-size: 1200px;
   }
 }
