--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -6,39 +6,10 @@
   }
   &__wrapper {
     @include container();
-    border: 1px solid black;
+    background-color: rgba(255,0,0,0.5);
+    display: none;
   }
 
-  &__map {
-    overflow: hidden;
-    position: relative;
-    height: 300px;
-    width: 100%;
-    background: url(../img/bg-map-mobile@1x.png) no-repeat 0 0;
-    background-size: cover;
-    // &:after {
-    //   display: block;
-    //   content: "";
-    //   width: 55%;
-    //   height: 50px;
-    //   background-color: white;
-    //   position: absolute;
-    //   right: -8px;
-    //   top: -13px;
-    //   transform: rotate(-10deg);
-    // }
-    // &:before {
-    //   display: block;
-    //   content: "";
-    //   width: 55%;
-    //   height: 50px;
-    //   background-color: white;
-    //   position: absolute;
-    //   left: -8px;
-    //   top: -13px;
-    //   transform: rotate(10deg);
-    // }
-  }
 
   &__goto {
     display: inline-block;
@@ -46,5 +17,22 @@
     width: 30px;
     background: url(../img/htmlacademy.svg) no-repeat 50%;
     vertical-align: middle;
+  }
+}
+
+@media (min-width: 768px) { 
+  .page-footer {
+    &__wrapper {
+      display: block;
+      height: 127px;
+    }
+  }
+}
+
+@media (min-width: 1200px) { 
+  .page-footer {
+    &__wrapper {
+      height: 197px;
+    }
   }
 }
