--- a/sass/blocks/outlines.scss
+++ b/sass/blocks/outlines.scss
@@ -12,3 +12,19 @@ body {
     background-size: 1200px;
   }
 }
+
+.page__photo {
+  background: #ccc url(../img/pink-photo-mobile.jpg) no-repeat 50% 0;
+  background-size: 320px;
+
+
+  @media (min-width: 768px) {
+    background: #ccc url(../img/pink-photo-tablet.jpg) no-repeat 50% 0;
+    background-size: 700px;
+  }
+  @media (min-width: 1200px) {
+    background: #ccc url(../img/pink-photo-desktop.jpg) no-repeat 50% 0;
+    background-size: 1200px;
+  }
+  
+}
