--- a/sass/blocks/make-post.scss
+++ b/sass/blocks/make-post.scss
@@ -4,6 +4,9 @@
     height: 757px;
     background-color: rgba(0,255,0,0.5);
   }
+  &__photo {
+    float: left;
+  }
   &__slider {
 
   }
@@ -12,6 +15,15 @@
     height: 20px;
     background: url(../img/icon-editor-diagram-fill.svg) no-repeat center;
     background-size: 100%;
+  }
+
+  &__tools {
+    list-style: none;
+    float: right;
+  }
+
+  &__tool {
+    display: inline-block;
   }
 }
 
