--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,4 +32,6 @@
 @import "blocks/checklist.scss";
 @import "blocks/user-contacts.scss";
 @import "blocks/apps.scss";
-@import "blocks/comment.scss";
+@import "blocks/emotions.scss";
+@import "blocks/send-form.scss";
+@import "blocks/form.scss";
