--- a/sass/blocks/main.scss
+++ b/sass/blocks/main.scss
@@ -1,7 +1,19 @@
 
 .main {
-  &__wrapper {
+  &__top {
     @include container();
-    border: 1px solid black;
+    height: 160px;
+    background-color: rgba(0,255,0,0.5);
+    p {
+    	margin: 0;
+    }
   }
+}
+
+@media (min-width: 768px) {
+	.main {
+		&__top {
+			height: 210px;
+		}
+	}
 }
