--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -2,6 +2,7 @@
 
   &__wrapper {
     @include container();
+
   }
   // background-color: #1d2631;
   // background-image: url(../img/bg-back-mobile@1x.jpg);
@@ -42,6 +43,10 @@
 
   &__title {
     margin: 0;
+    &--form {
+      height: 171px;
+      background-color: rgba(255,0,0,0.5);
+    }
   }
 
 
@@ -102,6 +107,11 @@
         height: 228px;
       }
     }
+    &__title {
+      &--form {
+        height: 330px;
+      }
+    }
   }
 }
 
@@ -134,6 +144,12 @@
     &__bottom {
       &--white {
         height: 240px;
+      }
+    }
+
+    &__title {
+      &--form {
+        height: 284px;
       }
     }
   }
