--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -1,17 +1,34 @@
 .reviews {
+  background-color: white;
+  height: 354px;
   &__wrapper {
     @include container();
     height: 354px;
-    background-color: rgba(0,0,255,0.5);
+    //background-color: rgba(0,0,255,0.5);
+    overflow: hidden;
+    text-align: center;
   }
-  &__items {
+  &:after {
+    padding: 0;
+    margin: 0;
+    content: "";
+    display: block;
+    height: 60px;
+    position: relative;
+    top: 0;
+    left: 0;
+    background: url(../img/bg-triangle-white.svg) no-repeat 0 0;
+    background-size: cover;
+  }
 
-  }
 }
 @media (min-width: 768px) { 
   .reviews {
     &__wrapper {
-      height: 302px;
+      height: 323px;
+    }
+    &:after {
+      height: 100px;
     }
   }
 }
@@ -20,6 +37,10 @@
   .reviews {
     &__wrapper {
       height: 414px;
+    }
+    &:after {
+      top: -60px;
+      height: 140px;
     }
   }
 }
