--- a/sass/blocks/slider.scss
+++ b/sass/blocks/slider.scss
@@ -1,16 +1,22 @@
 .slider {
+  overflow: hidden;
   &__items {
     margin: 0;
     padding: 0;
     list-style: none;
-    display: block;
+    display: flex;
     position: relative;
+    width: 960px;
+    align-items: center;
+    height: 290px;
+    left: -320px;
+    transition: left 1s;
   }
 
   &__item {
-    display: inline-block;
-    width: 280px;
-    margin-left: 8px;
+    width: 320px;
+    display: flex;
+    flex-direction: column;
   }
 
   &__controls {
@@ -30,5 +36,30 @@
       background-color: steelblue;
     }
   }
+}
 
+@media (min-width: 768px) {
+  .slider {
+    &__items {
+      width: 1980px;
+      left: -660px;
+    }
+    &__item {
+      width: 660px;
+      flex-direction: column-reverse;
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  .slider {
+    &__items {
+      width: 2880px;
+      left: -960;
+    }
+    &__item {
+      height: 300px;
+      width: 960px;
+    }
+  }
 }
