--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,6 +19,7 @@
 @import "blocks/intro.scss";
 @import "blocks/reviews.scss";
 @import "blocks/suggestion.scss";
+@import "blocks/effect.scss";
 
 
 //photo.html
