--- a/sass/blocks/checklist.scss
+++ b/sass/blocks/checklist.scss
@@ -1,26 +1,79 @@
 .checklist {
-	padding: 0;
-	border: none;
-	&__wrapper {
+  background: #f2f2f2;
+  padding: 0;
+  border: none;
+  &__wrapper {
+  	display: flex;
+  	flex-direction: column;
+  	justify-content: space-around;
+  	align-items: flex-start;
+    height: 604px;
+    padding-left: 20px;
+	
+  }
+  &__title {
+    font-size: 14px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #d22856;
+    background-color: #f2f2f2;
+    padding-top: 30px;
+  }
+  &__item {
+    input { 
+     &:checked+span:before {
+      background: url(../img/icon-yes.svg) no-repeat 50%;
+     }
+     display: none;
+     
+    }
+  }
 
-		height: 604px;
-		background-color: rgba(255,0,0,0.5);
-		p { margin: 0; }
+  &__item-text {
 
-	}
+    display: flex;
+    flex-direction: row;
+    font-size: 18px;
+    line-height: 30px;
+    align-items: center;
+
+    &:before {
+      content: "";
+      display: block;
+      width: 40px;
+      height: 40px;
+      border: 2px solid #e5e5e5;
+      box-sizing: border-box;
+      margin-right: 30px;
+    }
+  }
+
 }
 @media (min-width: 768px) {
-	.checklist {
-		&__wrapper {
-			height: 615px;
-		}
+  .checklist {
+    border: 1px solid #e5e5e5;
+    border-radius: 5px;
+    background: #fff;
+    &__wrapper {
+	  height: 615px;
 	}
+  &__title {
+    background-color: #fff;
+    padding-top: 0;
+  }
+  }
 }
 
 @media (min-width: 1200px) {
-	.checklist {
-		&__wrapper {
-			height: 300px;
-		}
-	}
+  .checklist {
+  	&__wrapper {
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-items: center;
+  	  height: 300px;
+  	}
+    &__item {
+      width: 270px;
+    }
+  }
 }
