--- a/sass/blocks/emotions.scss
+++ b/sass/blocks/emotions.scss
@@ -1,19 +1,48 @@
 .emotions {
-	padding: 0;
-	border: none;
-	&__wrapper {
-		
-		height: 300px;
-		background-color: rgba(255,255,0,0.5);
-		p { margin: 0; }
+  fieldset {
+    padding: 0;
+    border: none;
+    width: 100%;
+  }
+  
+  &__title {
+    font-size: 14px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #d22856;
+  }
+  &__wrapper {	
+	height: 300px;	
+  }
+  &__comment {
+  	width: 270px;
+  }
+}
 
-	}
+#comment-field {
+  display: block;
+  resize: none;
+  height: 197px;
+  padding: 10px;
+  border: 1px solid #f2f2f2;
+  font-size: 18px;
+  line-height: 30px;
+  width: 280px;
+  margin: 0 auto;
+  outline: none;
 }
 @media (min-width: 768px) {
 	.emotions {
-		&__wrapper {
-			height: 360px;
-		}
+	  fieldset {
+	  	border: 1px solid #f2f2f2;
+	  }
+	  &__wrapper {
+	    height: 360px;
+	  }
+	  #comment-field {
+	  	width: 497px;
+	  	margin: 50px auto;
+	  }
 	}
 }
 @media (min-width: 1200px) {
@@ -21,5 +50,11 @@
 		&__wrapper {
 			height: 270px;
 		}
+		#comment-field {
+	  	  width: 820px;
+	  	  margin: 30px auto;
+	  	  height: 127px;
+	  }
+
 	}
 }
