--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -1,4 +1,5 @@
 .page-footer {
+  background-color: white;
   &--hidden-mobile {
     display: none;
   }
@@ -9,8 +10,12 @@
   }
   &__wrapper {
     @include container();
-    background-color: rgba(255,0,0,0.5);
+
     height: 284px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
   }
 
 
@@ -21,6 +26,10 @@
     background: url(../img/htmlacademy.svg) no-repeat 50%;
     vertical-align: middle;
   }
+
+  &__copyright {
+    color: #283645;
+  }
 }
 
 @media (min-width: 768px) { 
@@ -29,8 +38,8 @@
       display: block;
     }
     &__wrapper {
-      display: block;
       height: 127px;
+      flex-direction: row;
     }
   }
 }
